--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,18 @@ body {
   margin: 0;
   font-family: "Poppins";
 }
+header {
+  background: #fff;
+}
+header .container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+header a {
+  color: #333;
+  text-decoration: none;
+}
